# timer

./: LICENSE  README.md  install.sh  pyproject.toml  update.sh
src/timer/: __init__.py  __main__.py  cli.py  config.py  daemon.py  notify.py  paths.py  storage.py  timeparse.py
