[project]
name = "timer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "storchdev", email = "pianister123@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "parsedatetime>=2.6",
    "prettytable>=3.17.0",
]

[project.scripts]
timer = "timer.cli:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
